Add @types/node ts-node as dev dependencies

--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/AaronArmour/trivia-quiz/issues"
   },
-  "homepage": "https://github.com/AaronArmour/trivia-quiz#readme"
+  "homepage": "https://github.com/AaronArmour/trivia-quiz#readme",
+  "dependencies": {
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "ts-node": "^10.9.2"
+  }
 }
