--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,11 @@
 {
   "trailingComma": "all",
   "tabWidth": 2,
-  "printWidth": 120,
-  "semi": false,
-  "singleQuote": false,
-  "bracketSpacing": true
+  "useTabs": false,
+  "printWidth": 80,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
