--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,12 +2,17 @@
   "name": "@quiz-apps/server",
   "version": "1.0.0",
   "main": "build/index.js",
-  "devDependencies": {},
   "scripts": {
     "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "The server application for the trivia quiz"
+  "description": "The server application for the trivia quiz",
+  "dependencies": {
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.12"
+  }
 }
