--- a/apps/cli-client/package.json
+++ b/apps/cli-client/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "build/index.js",
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "A cli client application for the trivia quiz",
   "dependencies": {
+    "kleur": "^4.1.5",
     "prompts": "^2.4.2",
     "ws": "^8.18.0"
   },
