--- a/apps/cli-client/package.json
+++ b/apps/cli-client/package.json
@@ -2,12 +2,21 @@
   "name": "@quiz-apps/cli-client",
   "version": "1.0.0",
   "main": "build/index.js",
-  "devDependencies": {},
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "A cli client application for the trivia quiz"
+  "description": "A cli client application for the trivia quiz",
+  "dependencies": {
+    "kleur": "^4.1.5",
+    "prompts": "^2.4.2",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/prompts": "^2.4.9",
+    "@types/ws": "^8.5.12"
+  }
 }
