--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "The server application for the trivia quiz",
   "dependencies": {
+    "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
