--- a/apps/cli-client/package.json
+++ b/apps/cli-client/package.json
@@ -13,10 +13,9 @@
   "dependencies": {
     "kleur": "^4.1.5",
     "prompts": "^2.4.2",
-    "ws": "^8.18.0"
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
-    "@types/prompts": "^2.4.9",
-    "@types/ws": "^8.5.12"
+    "@types/prompts": "^2.4.9"
   }
 }
