--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,10 +10,7 @@
   "license": "ISC",
   "description": "The server application for the trivia quiz",
   "dependencies": {
-    "winston": "^3.14.2",
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@types/ws": "^8.5.12"
+    "socket.io": "^4.8.0",
+    "winston": "^3.14.2"
   }
 }
