--- a/apps/cli-client/package.json
+++ b/apps/cli-client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "A cli client application for the trivia quiz",
   "dependencies": {
+    "@quiz-lib/utils": "^1.0.0",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2",
     "socket.io-client": "^4.8.0"
